--- a/styles/main.css
+++ b/styles/main.css
@@ -19,3 +19,30 @@
   border-radius: 1px;
   border: 1px solid lightblue
 }
+
+.btn-group {
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  background-image: url(https://media.giphy.com/media/VzH4jP7ppWF8dgCxcg/giphy.gif);
+}
+
+.btn-primary {
+  margin-right: 10px;
+}
+
+.petsForm{
+  width: 100%;
+  text-align: center;
+  font-size: 30px;
+
+
+  background-color: white;
+  box-shadow: 0 8px 32px 0 lightblue;
+  backdrop-filter: blur( 4px );
+  -webkit-backdrop-filter: blur( 4px );
+  border-radius: 1px;
+  border: 3px solid lightblue
+
+}
