--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,5 @@
 /*Targets the id in the html document, which affects every card inside.*/
-#PetCards {
+#petCards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -42,7 +42,7 @@
   box-shadow: 0 8px 32px 0 lightblue;
   backdrop-filter: blur( 4px );
   -webkit-backdrop-filter: blur( 4px );
-  border-radius: 1px;
+  border-radius: 2px;
   border: 3px solid lightblue
 
 }
